overflow fix

--- a/styles/core.css
+++ b/styles/core.css
@@ -56,6 +56,7 @@ header a {
 body {
 	margin: 0;
 	background-color: #f2f2f2;
+	overflow-x: hidden;
 }
 #logo {
 	grid-area: logo;
@@ -188,7 +189,6 @@ footer {
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	grid-gap: 0px 3%;
 	padding: 1% 12% 0% 12%;
-	margin-top: 20vh;
 }
 .footerpart1 {
 	grid-area: location;
